[project]
name = "soie"
version = "0.1.0"
description = "A simple async Python Web framework"
readme = "README.md"
authors = [
    {name = "Elliot", email = "hack00mind@gmail.com"},
]
dependencies = [
    "typing-extensions~=3.10",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "	Apache-2.0"}

[project.urls]
homepage = "https://github.com/Eliot00/soie"


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
includes = ["soie"]
source-includes = ["tests"]

[tool.pdm.scripts]
test = "pytest tests/"
lint = "pre-commit run --all-files"

[tool.pdm.dev-dependencies]
test = [
    "pytest~=6.2",
    "pytest-asyncio~=0.15",
    "async-asgi-testclient~=1.4",
]

[tool.black]
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
atomic = true
